--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 gunicorn==23.0.0
 packaging==24.2
+pillow==11.1.0
 psycopg2-binary==2.9.10
 PyJWT==2.9.0
 pyotp==2.9.0
