--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,13 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
 asgiref==3.8.1
+async-timeout==5.0.1
+attrs==25.3.0
+certifi==2025.1.31
+deprecation==2.1.0
 dj-database-url==2.3.0
 Django==5.1.7
 django-cors-headers==4.7.0
@@ -7,20 +16,50 @@ django-otp==1.5.4
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.5.0
 drf-yasg==1.21.10
+exceptiongroup==1.2.2
+frozenlist==1.6.0
+gotrue==2.9.1
 gunicorn==23.0.0
+h11==0.16.0
+h2==4.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httpx==0.25.2
+hyperframe==6.1.0
+idna==3.10
 inflection==0.5.1
+iniconfig==2.1.0
+multidict==6.4.3
 packaging==24.2
 pillow==11.1.0
+pluggy==1.5.0
+postgrest==0.15.1
+propcache==0.3.1
 psycopg2-binary==2.9.10
+pydantic==2.11.3
+pydantic_core==2.33.1
 PyJWT==2.9.0
 pyotp==2.9.0
+pytest==8.3.5
+pytest-mock==3.14.0
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
+realtime==1.0.6
+rfc3986==1.5.0
+six==1.17.0
+sniffio==1.3.1
 sqlparse==0.5.3
+storage3==0.7.7
+StrEnum==0.4.15
+supabase==2.3.5
+supafunc==0.3.3
+tomli==2.2.1
+typing-inspection==0.4.0
 typing_extensions==4.12.2
 uritemplate==4.1.1
+websockets==12.0
 whitenoise==6.9.0
-supabase==2.3.5
-
+yarl==1.20.0
