--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ python-dotenv==1.1.0
 pytz==2025.2
 PyYAML==6.0.2
 rfc3986==1.5.0
+requests==2.31.0
 six==1.17.0
 sniffio==1.3.1
 sqlparse==0.5.3
@@ -65,3 +66,5 @@ numpy~=2.1.3
 gevent>=1.4.0
 cloudinary
 django-cloudinary-storage
+google-generativeai==0.8.5
+openai==0.28
